total number of items + icon in the right top corner

--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/add-on-products/template/wizard-add-on-products.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/add-on-products/template/wizard-add-on-products.html
@@ -10,7 +10,7 @@
 			<small>{{ '[Wizard Step 4] Add-On Products text' | translate }}</small>
 		</div>
 		<div class="col-sm-2 text-right">
-			<h1>5 <i class="fa fa-puzzle-piece"></i></h1>
+			<h1>{{ _addOnProductsStateService.totalNoOfAddOnProducts }} <span class="unitpal-font">{{ _addOnProductsStateService.getMeta().iconFontName }}</span></h1>
 		</div>
 	</div>
 </div>
