--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
@@ -7,7 +7,7 @@
 			<small>{{ '[Wizard Step 2] Beds text' | translate }}</small>
 		</div>
 		<div class="col-sm-2 text-right">
-			<h1>2 <i class="fa fa-puzzle-piece"></i></h1>
+			<h1>{{ _bedsStateService.totalNoOfBeds }} <span class="unitpal-font">{{_bedsStateService.getMeta().iconFontName}}</span></h1>
 		</div>
 	</div>
 </div>
