--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/breakfast/template/wizard-breakfast.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/breakfast/template/wizard-breakfast.html
@@ -10,7 +10,7 @@
 			<small>{{ '[Wizard Step 3] Breakfast text' | translate }}</small>
 		</div>
 		<div class="col-sm-2 text-right">
-			<h1>4 <i class="fa fa-puzzle-piece"></i></h1>
+			<h1>{{ _breakfastStateService.totalNoOfBreakfasts }} <span class="unitpal-font">{{ _breakfastStateService.getMeta().iconFontName }}</span></h1>
 		</div>
 	</div>
 </div>
