--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/customer-register/template/wizard-customer-register.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/customer-register/template/wizard-customer-register.html
@@ -10,7 +10,7 @@
 			<small>{{ '[Wizard Step 6] Customer Register text' | translate }}</small>
 		</div>
 		<div class="col-sm-2 text-right">
-			<h1>7 <i class="fa fa-puzzle-piece"></i></h1>
+			<h1>{{ _customerRegisterStateService.totalNoOfCustomers }} <span class="unitpal-font">{{ _customerRegisterStateService.getMeta().iconFontName }}</span></h1>
 		</div>
 	</div>
 </div>
