--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/price-products/template/wizard-price-products.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/price-products/template/wizard-price-products.html
@@ -10,7 +10,7 @@
 			<small>{{ '[Wizard Step 5] Price Products' | translate }}</small>
 		</div>
 		<div class="col-sm-2 text-right">
-			<h1>6 <i class="fa fa-puzzle-piece"></i></h1>
+			<h1>{{ _priceProductsStateService.totalNoOfActivePriceProducts }} <span class="unitpal-font">{{ _priceProductsStateService.getMeta().iconFontName }}</span></h1>
 		</div>
 	</div>
 </div>
