--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
@@ -9,7 +9,7 @@
         <h1>{{ bedVM.bed.name }}</h1>
     </div>
     <div class="col-sm-12">
-        <small>Accomodates {{ bedVM.bed.maxNoAdults }} <i class="fa fa-male"></i> {{ bedVM.bed.maxNoChildren }} <i class="fa fa-child"></i></small>
+        <small>Accomodates {{ bedVM.bed.maxNoAdults }} <span class="unitpal-font">:</span> {{ bedVM.bed.maxNoChildren }} <span class="unitpal-font">;</span></small>
         <br/>
         <small>Size <i class="fa fa-arrows-h"></i> {{ bedVM.bed.size.lengthCm }} <i class="fa fa-arrows-v"> {{ bedVM.bed.size.widthCm }}</i></small>
     </div>
