--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-overview/template/room-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-overview/template/room-overview.html
@@ -9,7 +9,7 @@
         <h1>{{ roomVM.room.name }}</h1>
     </div>
     <div class="col-sm-12">
-        <small>Accomodates {{ roomVM.capacity.maxAdults }} <i class="fa fa-male"></i> {{ roomVM.capacity.maxChildren }} <i class="fa fa-child"></i></small>
+        <small>Accomodates {{ roomVM.capacity.maxAdults }} <span class="unitpal-font">:</span> {{ roomVM.capacity.maxChildren }} <i class="unitpal-font">;</i></small>
     </div>
 
     <div class="col-sm-12">
