finished integrating icons from unitpal font

--- a/assets/client/src/common/utils/components/file-attachments/template/file-attachments.html
+++ b/assets/client/src/common/utils/components/file-attachments/template/file-attachments.html
@@ -26,7 +26,7 @@
 					<i class="fa fa-download"></i>
 				</a>
 				<a class="btn btn-xs">
-					<i class="fa fa-remove" (click)="removeFileAttachment(fileAttachment)"></i>
+					<i class="fa unitpal-font" (click)="removeFileAttachment(fileAttachment)">\</i>
 				</a>
 			</td>
 		</tr>
