--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
@@ -34,7 +34,7 @@
 							<td>{{priceProduct.name}}</td>
 							<td>
 								<a class="btn btn-xs" (click)="removePriceProduct(priceProduct)">
-									<i class="fa fa-remove"></i> {{ 'Remove' | translate }}
+									<i class="fa unitpal-font">\</i> {{ 'Remove' | translate }}
 								 </a>
 							</td>
 						</tr>
