--- a/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
@@ -24,7 +24,7 @@
 				</td>
 				<td *ngIf="allowCategoryEdit">
 					<a class="btn btn-xs" *ngIf="!roomCategoryVM.isEditing && !roomCategoryVM.isSaving" (click)="editRoomCategory(roomCategoryVM)">
-						<i class="fa fa-edit"></i>
+						<i class="fa unitpal-font">]</i>
 					</a>
 					<a class="btn btn-xs" *ngIf="roomCategoryVM.isEditing && !roomCategoryVM.isSaving" (click)="saveRoomCategory(roomCategoryVM)">
 						<i class="fa fa-save"></i>
