--- a/assets/client/src/pages/internal/containers/common/inventory/modals/yield-filter/template/yield-filter-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/yield-filter/template/yield-filter-modal.html
@@ -55,7 +55,7 @@
 
 				<td>
 					<a class="btn btn-xs" *ngIf="!yieldFilterValueVM.isEditing && !yieldFilterValueVM.isSaving" (click)="editYieldFilter(yieldFilterValueVM)">
-						<i class="fa fa-edit"></i>
+						<i class="fa unitpal-font">]</i>
 					</a>
 					<a class="btn btn-xs" *ngIf="yieldFilterValueVM.isEditing && !yieldFilterValueVM.isSaving" (click)="saveYieldFilter(yieldFilterValueVM)">
 						<i class="fa fa-save"></i>
