--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
@@ -19,7 +19,7 @@
 				<td>{{constraintVM.displayValue}}</td>
 				<td *ngIf="!readonly">
 					<a class="btn btn-xs" (click)="removeConstraint(constraintVM)">
-						<i class="fa fa-remove"></i> {{ 'Remove' | translate }}
+						<i class="fa unitpal-font">\</i> {{ 'Remove' | translate }}
 					</a>
 				</td>
 			</tr>
