--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -41,7 +41,7 @@
 				<a class="btn" 
 					*ngIf="pricePerPersonVM.previousRoomCategoryId" 
 					(click)="pricePerPersonContainer.copyPrices(pricePerPersonVM.previousRoomCategoryId, pricePerPersonVM.roomCategoryStats.roomCategory.id)">
-					<i class="fa fa-copy"></i> <small>{{ 'Copy Prices from Previous Room Category' | translate }}</small>
+					<i class="fa unitpal-font">[</i> <small>{{ 'Copy Prices from Previous Room Category' | translate }}</small>
 				</a>
 				<div class="row">
 					<div class="col-md-6 col-sm-6 col-xs-6">
