--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/room-categories/template/price-product-edit-room-categories-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/room-categories/template/price-product-edit-room-categories-section.html
@@ -5,7 +5,7 @@
 			<td>{{roomCategory.displayName}}</td>
 			<td *ngIf="!readonly">
 				<a class="btn btn-xs" (click)="removeRoomCategory(roomCategory)">
-					<i class="fa fa-remove"></i> {{ 'Remove' | translate }} 
+					<i class="fa unitpal-font">\</i> {{ 'Remove' | translate }} 
 				</a>
 			</td>
 		</tr>
