--- a/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
@@ -9,7 +9,7 @@
         <div class="col-md-4" *ngFor="#bedVM of bedVMList">
             <div class="btn bed-slot" [ngClass]="{'unselected': !bedSelected(bedVM)}" (click)="selectedBedVM=bedVM">
                 <div class="bed-slot-inner" [title]="bedVM.bed.name">
-                    <span class="unitpal-font">{{bedVM.template.iconUrl}}</span>
+                    <span class="unitpal-font bed-btn">{{bedVM.template.iconUrl}}</span>
                     <br/>
                     <small>{{bedVM.bed.name}}</small>
                     <br/> {{bedVM.capacity.maxAdults}}
