--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/add-on-products/template/price-product-edit-add-on-products-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/add-on-products/template/price-product-edit-add-on-products-section.html
@@ -6,7 +6,7 @@
 			<td>{{ccy.nativeSymbol}} {{addOnProduct.price | price}}</td>
 			<td *ngIf="!readonly">
 				<a class="btn btn-xs" (click)="removeAddOnProduct(addOnProduct)">
-					<i class="fa fa-remove"></i> {{ 'Remove' | translate }} 
+					<i class="fa unitpal-font">\</i> {{ 'Remove' | translate }}
 				</a>
 			</td>
 		</tr>
