bed overview small fix

--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-12">
-        <h1><i [ngClass]="bedVM.template.iconUrl" class="fa-4x"></i></h1>
+        <span class="unitpal-font bed-icon-overview">{{bedVM.template.iconUrl}}</span>
     </div>
     <div class="col-sm-12">
         <kbd>{{ 'Selected' | translate }}</kbd>
